# aspen

./: Cargo.toml  README.md  syntax.aspen
aspen/: arrays.aspen  ev.aspen  exec.aspen  exp.aspen  fn.aspen  import.aspen  loops.aspen  minified.aspen  obj.aspen  syntax.aspen  while.aspen  x.aspen
src/: errors.rs  evaluate.rs  lexer.rs  main.rs  parser.rs
src/evaluate/: error.rs  func.rs  globals.rs  import.rs  types.rs  utils.rs  value.rs
src/evaluate/import/: io.rs  math.rs
src/parser/: comment.rs  conditional.rs  error.rs  expr.rs  for_loop.rs  func.rs  import.rs  macros.rs  operator.rs  return_stmt.rs  utils.rs  value.rs  var.rs  while_loop.rs
