[package]
name = "aspen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
rug = "1.24.1"
dialoguer = "0.11.0"
hashbrown = "0.14.3"
ariadne = { version = "0.4.1", features = ["auto-color"] }
