[package]
name = "aspen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
rug = { version = "1.24.1", default-features = false, features = [
    "integer",
    "float",
    "std",
] }
dialoguer = "0.11.0"
hashbrown = "0.14.3"
ariadne = { version = "0.4.1", features = ["auto-color"] }
rand = "0.8.5"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
